[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/square.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/PlayerSquare.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/GridSnapper.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="PlayerSquare" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
player_speed = Vector2( 300, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="OuchieDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuchieDetector"]
shape = SubResource( 2 )

[node name="GridSnapper" type="Position2D" parent="."]
position = Vector2( 0, -160 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="GridSnapper"]
current = true
smoothing_enabled = true
[connection signal="area_entered" from="OuchieDetector" to="." method="_on_area_entered"]
[connection signal="body_entered" from="OuchieDetector" to="." method="_on_body_entered"]
